--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,4 +23,14 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest
+        pip install pytest-cov
+        pytest --cov=./src --cov-report=xml
+
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        yml: ./codecov.yml 
